<resources>
    <string name="app_name">Practicum-Android-Diploma</string>
    <string name="main">Главная</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Поиск</string>
    <string name="country_choice">Выбор страны</string>
    <string name="favorite">Избранное</string>
    <string name="filtering_settings">Настройки фильтрации</string>
    <string name="industry_choice">Выбор отрасли</string>
    <string name="region_choice">Выбор региона</string>
    <string name="team">Команда</string>
    <string name="vacancy">Вакансия</string>
    <string name="workplace_choice">Выбор места работы</string>

    <string name="vacancies_search">Поиск вакансий</string>
    <string name="enter_search_request">Введите запрос</string>
    <string name="no_internet">Нет интернета</string>
    <string name="no_such_vacancies">Таких вакансий нет</string>
    <string name="text">Text</string>
    <string name="vacancy_for_screen">Вакансия</string>
    <string name="required_experience">Требуемый опыт</string>
    <string name="job_description">Описание вакансии</string>
    <string name="key_skills">Ключевые навыки</string>
    <string name="contacts">Контакты</string>
    <string name="contact_person">Контактное лицо</string>
    <string name="e_mail">E-mail</string>
    <string name="phone">Телефон</string>
    <string name="comment">Комментарий</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="vacancy_not_found">Вакансия не найдена или удалена</string>

    <string name="salary_from_to">От %s до %s %s</string>
    <string name="salary_from">От %s %s</string>
    <string name="salary_to">До %s %s</string>
    <string name="salary_not">Зарплата не указана</string>
    
    <string name="vacancies_found">Найдено %d вакансий</string>
    <string name="there_are_no_vacancies">Таких вакансий нет</string>
    <string name="no_get_list_vacancies">Не удалось получить список вакансий</string>

    <string name="share_vacancy">Посмотрите вакансию: %s\n %s</string>
    <string name="error_send_email">Почтовые клиенты не установлены</string>
    <string name="error_share">Мессенджеры не установлены</string>
    <string name="error_phone">Не удалось набрать номер</string>
    <string name="list_of_developers">Над приложением работали</string>
    <string name="developer_one">Ангелина Еременко</string>
    <string name="developer_two">Яна Кудринская</string>
    <string name="developer_three">Даниил Ильс</string>
    <string name="developer_four">Владислав Московский</string>

    <string name="text_required_experience">Требуемый опыт</string>
    <string name="text_required_experience_example">От 1 года до 3 лет</string>
    <string name="text_type_employment_example">Полная занятость, Удаленная работа</string>

    <string name="favorites">Избранное</string>
    <string name="empty_list">Список пуст</string>
    <string name="error_list">Не удалось получить список вакансий</string>

    <string name="enter_region">Введите регион</string>
    <string name="no_region">Такого региона нет</string>
    <string name="no_list">Не удалось получить\nсписок</string>
    <string name="enter_industry">Введите отрасль</string>
    <string name="apply">Применить</string>
    <string name="country">Страна</string>
    <string name="region">Регион</string>
    <string name="workplace">Место работы</string>
    <string name="industry">Отрасль</string>
    <string name="enter_amount">Введите сумму</string>
    <string name="without_salary">Не показывать без зарплаты</string>
    <string name="expected_salary">Ожидаемая зарплата</string>
    <string name="reset">Сбросить</string>
    <string name="chose">Выбрать</string>

    <string name="area_string">%s, %s</string>
    <string name="not_found_region">Такого региона нет</string>
    <string name="error_region">Не удалось получить\nсписок</string>

</resources>
