<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".ui.filteringsettings.FilteringSettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarStyle"
        android:background="?attr/colorSurface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/filtering_settings"
        app:titleTextAppearance="@style/ToolbarTitle"
        app:titleTextColor="?attr/colorOnSurface" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/workplace_container"
        android:layout_width="0dp"
        android:layout_height="@dimen/_60dp"
        android:layout_marginTop="@dimen/_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/workplace"
            style="@style/TextRegularGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:text="@string/workplace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/arrow_forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16dp"
            android:src="@drawable/ic_arrow_forward"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/industry_container"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workplace_container">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/industry"
            style="@style/TextRegularGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:text="@string/industry"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/arrow_forward_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16dp"
            android:src="@drawable/ic_arrow_forward"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/expected_salary_container"
        style = "@style/SalaryField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/expected_salary"
        app:placeholderText="@string/enter_amount"
        app:placeholderTextColor="@color/hint_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/industry_container">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/expected_salary"
        android:background="@drawable/bg_expected_salary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/industry_container" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/materialCheckBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:enabled="true"
        android:layoutDirection="rtl"
        android:paddingStart="0dp"
        android:text="@string/without_salary"
        android:textDirection="ltr"
        app:buttonTint="@color/blue"
        android:textAppearance="@style/TextRegular.16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expected_salary_container"
        app:useMaterialThemeColors="false" />

    <Button
        android:id="@+id/apply_button"
        android:textAppearance="@style/TextMedium.16"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60dp"
        android:layout_marginHorizontal="@dimen/_17dp"
        android:layout_marginBottom="@dimen/_8dp"
        android:background="@drawable/bg_blue_button"
        android:gravity="center"
        android:text="@string/apply"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/reset_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/reset_button"
        android:textAppearance="@style/TextMedium.16"
        android:textColor="@color/red"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60dp"
        android:layout_marginHorizontal="@dimen/_17dp"
        android:layout_marginBottom="@dimen/_24dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/reset"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
