<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".ui.industrychoice.IndustryChoiceFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarStyle"
        android:background="?attr/colorSurface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/industry_choice"
        app:titleTextAppearance="@style/ToolbarTitle"
        app:titleTextColor="?attr/colorOnSurface" />

    <EditText
        android:id="@+id/searchIndustry"
        style="@style/SearchFieldRegion"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_56dp"
        android:layout_marginHorizontal="@dimen/_12dp"
        android:layout_marginVertical="@dimen/_8dp"
        android:hint="@string/enter_industry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/searchFieldIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16dp"
        android:src="@drawable/ic_search"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/searchIndustry"
        app:layout_constraintEnd_toEndOf="@+id/searchIndustry"
        app:layout_constraintTop_toTopOf="@+id/searchIndustry" />

    <ImageView
        android:id="@+id/clearIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16dp"
        android:src="@drawable/ic_clear"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/searchIndustry"
        app:layout_constraintEnd_toEndOf="@+id/searchIndustry"
        app:layout_constraintTop_toTopOf="@+id/searchIndustry" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_16dp"
        android:clipToPadding="false"
        android:paddingTop="@dimen/_38dp"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchIndustry"
        app:layout_constraintBottom_toTopOf="@id/apply_button"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/errorPlaceholder"
        style="@style/ErrorPlaceholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/error"
        android:text="@string/no_list"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchIndustry"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/apply_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60dp"
        android:layout_marginHorizontal="@dimen/_17dp"
        android:layout_marginBottom="@dimen/_24dp"
        android:background="@drawable/bg_blue_button"
        android:gravity="center"
        android:text="@string/chose"
        android:textAllCaps="false"
        android:textAppearance="@style/TextMedium.16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>
